# PopConfig

./: .bash_profile  .bashrc  .readthedocs.yaml  .zprofile  .zshrc  README.rst  cleanCache.sh  core_backup  mngDownloads.sh
.config/bash_scripts/: .bash_aliases  .bash_arch_aliases  build.sh  compile.sh  create_dir.sh  create_file.sh  create_project_tmux.sh
.config/c++_files/: CMake1.txt  CMaketest.txt
.config/c_files/: CMaketest.txt  additional_file.c  additional_file.h  test.c  test.h  unit_test.c
.config/ghostty/: config
.config/py_files/: README.rst  ci_install.txt  conftest.py  main.py  pyproject.toml  test.py
.config/zsh_scripts/: .zsh_aliases  .zsh_arch_aliases  .zsh_git_aliases  build.zsh  compile.zsh  create_dir.zsh  create_file.zsh  create_project_tmux.zsh
docs/: requirements.txt
docs/source/: Pop.rst  Post.rst  Trouble.rst  conf.py  index.rst
