
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 90
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.tox]
legacy_tox_ini = """
	[tox]
    env_list = py313, mypy, lint, coverage

    [testenv]
	description = run tests with pytest
    deps = pytest
    commands = pytest tests -v {posargs}

	[testeng:mypy]
	deps = mypy
	commands = mypy pyproject

	[testenv:lint]
	deps = pre-commit
	commands = pre-commit run --all-files --show-diff-on-failure

	[testenv:coverage]
	deps = pytest-cov
	commands =
		pytest --cov --cov-report term-missing --cov-report html --cov-append --cov-context=test --cov-fail-under=100 {posargs}
	
	[gh-actions]
	python =
		3.10: py313, mypy, lint, coverage
"""

[tool.mypy]
exclude = ["docs", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "progress"

[project.urls]
"Homepage" = "https://github.com/Jon-Webb-79/pyproject"
